feat: LottoTest 추가